feat: updated ruler job outputs, standardized using variables and updated concepts

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -478,7 +478,7 @@
  # Mil - former civic_stratocracy
 	civic_tec_regular_stratocracy:0 "§G£tec_civic_ruler£§!Ordered Stratocracy"
 	civic_tec_regular_stratocracy_desc:0 "['concept_tec_ruler_replace_civic']\n\nIn Stratocracy the State and the Army are basically and constitutionally the same. Administrative positions are usually occupied by active or honorably discharged military chiefs."
-	civic_tec_regular_stratocracy_tooltip:0 "$tec_loc_c_ruler_swap$ §H£job_tec_commander£ $job_tec_commander_plural$§!\n- £building£ Capital Buildings replace §Yhalf§! their ['concept_tec_ruler_job_standard_plural_icon'] with ['concept_tec_ruler_job_tec_commander_plural_icon'].\n\n$tec_loc_c_unlocks_feature$ §H£job£ Master and Commander§!\n- £building£ $building_tec_regular_military_booster_1$ provide extra £job_tec_commander£ §Y$job_tec_commander$§!, increased by §Y$tec_loc_planet_ascension_plural$§!.\n\n$tec_loc_c_modifiers$\n$tec_loc_naval_cap$ from £job_politician£ Administrators: §G+1§!"
+	civic_tec_regular_stratocracy_tooltip:0 "$tec_loc_c_ruler_swap$ §H£job_tec_commander£ $job_tec_commander_plural$§!\n- £building£ Capital Buildings replace §Yhalf§! their ['concept_tec_ruler_job_standard_plural_icon'] with ['concept_tec_ruler_job_tec_commander_plural_icon'].\n\n$tec_loc_c_unlocks_feature$ §H£job£ Master and Commander§!\n- £building£ $building_tec_regular_military_booster_1$ provide extra £job_tec_commander£ §Y$job_tec_commander$§!, increased by §Y$tec_loc_planet_ascension_plural$§!.\n\n$tec_loc_c_modifiers$\n$tec_loc_naval_cap$ from $tec_loc_effect_administrators$: §G+1§!"
 
  # Pacif - former civic_bureaucracy
 	civic_tec_regular_irenic_bureaucracy:0 "§G£tec_civic_ruler£§!Irenic Bureaucracy"
@@ -900,7 +900,7 @@
 
 		civic_tec_corporate_feudal_realm:0 "Feudal INC"
 		civic_tec_corporate_feudal_realm_desc:0 "['concept_tec_leader_civic']\n\nThis mega-business subdivides its properties into localized feudal-like controled commerces, where each subdivision CEO is treated and gets benefits close to what a local monarch would have and their principles, culture and roles are supported by a corps of powerful well-paid vassals that control the economic efficiency of their territories with considerable autonomy."
-		civic_tec_corporate_feudal_realm_tooltip:0 "$tec_loc_c_leader_bonus$ §H$tec_loc_leader_icon$ Feudal Lords§!\n- Your §YLeaders§! do not cost £unity£ Unity upkeep if they are employed, but cannot be dismissed. In addition, your employed §Y$official_plural_with_icon$§! generate §Y$tec_loc_unity$§! equal to their level.\n\n$tec_loc_c_unlocks_feature$ §H£building£ Fortifed Keeps§!\n- Allow the construction of £building£ §HFortified Keeps§!, which are Planet-Unique and provide £housing£ §YHousing§!, ['concept_tec_ruler_job_tec_landowner_corporate_icon'] and ['concept_tec_worker_job_tec_peasant_corporate_icon'] jobs.\n\n$tec_loc_c_unlocks_feature$ §H£loyalty£ Ensured Loyalty§!\n- Your §YSubjects§! gain an additional §G1§! $r_loyalty$ and do not suffer penalties from you having multiple Subjects.\n\n- Your §YSubjects§! cannot have the following Agreement Terms:\n$t$$TRIGGER_FAIL$§Y$subject_cannot_expand$§!.\n$t$$TRIGGER_FAIL$§YDo not join subject wars§!.\n$t$$TRIGGER_FAIL$§Y$subject_can_not_do_diplomacy$§!."
+		civic_tec_corporate_feudal_realm_tooltip:0 "$tec_loc_c_leader_bonus$ §H$tec_loc_leader_icon$ Feudal Lords§!\n- Your §YLeaders§! do not cost £unity£ Unity upkeep if they are employed, but cannot be dismissed. In addition, your employed §Y$official_plural_with_icon$§! generate §Y$tec_loc_unity$§! equal to their level.\n\n$tec_loc_c_unlocks_feature$ §H£building£ Fortifed Keeps§!\n- Allow the construction of £building£ §HFortified Keeps§!, which are Planet-Unique and provide £housing£ §YHousing§!, ['concept_tec_ruler_job_tec_landowner_icon'] and ['concept_tec_worker_job_tec_peasant_corporate_icon'] jobs.\n\n$tec_loc_c_unlocks_feature$ §H£loyalty£ Ensured Loyalty§!\n- Your §YSubjects§! gain an additional §G1§! $r_loyalty$ and do not suffer penalties from you having multiple Subjects.\n\n- Your §YSubjects§! cannot have the following Agreement Terms:\n$t$$TRIGGER_FAIL$§Y$subject_cannot_expand$§!.\n$t$$TRIGGER_FAIL$§YDo not join subject wars§!.\n$t$$TRIGGER_FAIL$§Y$subject_can_not_do_diplomacy$§!."
 	# /
 
 	civic_distinguished_admiralty:0 "§M£tec_civic_leader£§!Distinguished Admiralty"
@@ -965,7 +965,7 @@
 
 	civic_tec_regular_executive_committee: "§M£tec_civic_leader£§!Executive Committee"
 	civic_tec_regular_executive_committee_desc: "['concept_tec_leader_civic']\n\nThis government is dominated by a committee of the Empire's most skillful bureaucrats and administrators."
-	civic_tec_regular_executive_committee_tooltip:0 "$tec_loc_c_leader_bonus$ §H£official£ Efficient Duty§!\n- Active employed §Y$official_plural_with_icon$§! have a §G50%§! less §Y$tec_loc_unity$§! Upkeep and produce §G3§! §Y$tec_loc_unity$§! per level.\n\n$tec_loc_c_modifiers$\n- $tec_loc_amenities$ from £job_politician£ Administrators: §G+2§!"
+	civic_tec_regular_executive_committee_tooltip:0 "$tec_loc_c_leader_bonus$ §H£official£ Efficient Duty§!\n- Active employed §Y$official_plural_with_icon$§! have a §G50%§! less §Y$tec_loc_unity$§! Upkeep and produce §G3§! §Y$tec_loc_unity$§! per level.\n\n$tec_loc_c_modifiers$\n- $tec_loc_amenities$ from $tec_loc_effect_administrators$: §G+2§!"
 
 	civic_tec_regular_genetic_ascendancy:0 "§M£tec_civic_leader£§!Genetic Ascendancy"
 	civic_tec_regular_genetic_ascendancy_desc:0 "['concept_tec_leader_civic']\n\nPeople of this society especially preserve uniqueness of their biological origins, and Leaders are traditionally chosen and groomed primarily on the basis of their genetic superiority."
@@ -1574,7 +1574,7 @@
  # Evolved
 	civic_tec_regular_capitalized_innovation:0 "§R§!Capitalized Innovation"
 	civic_tec_regular_capitalized_innovation_desc:0 "['concept_tec_basic_civic']\n\nThe constant competition between laboratories and private research industries is a process that has greatly benefited this empire, as it converted into acquisition of better and most affordable research associates."
-	civic_tec_regular_capitalized_innovation_tooltip:0 "$tec_loc_c_unlocks_feature$ §H$tec_loc_trade_icon$ Technological Investment§!\n- §Y£job_researcher£ $job_researcher_plural$§! increase the planet $tec_loc_trade_value$ by §G1%§! each."
+	civic_tec_regular_capitalized_innovation_tooltip:0 "$tec_loc_c_modifiers$\n- $tec_loc_trade_value$ from £job_researcher£ $job_researcher_plural$: §G+1%§!\n- $mod_planet_clerks_all_research_produces_add$: §G+1§!"
 		#OLD_civic_tec_regular_capitalized_innovation_tooltip:0 "$tec_loc_trade_value$ from £job_researcher£ $job_researcher_plural$: §G+3§!"
 
 	civic_tec_regular_corporate_politics:0 "§R§!Corporate Symbiotism"
