--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -242,6 +242,12 @@
 	tec_trait_upkeep_scale_with_skill: "§YTrait upkeep scale with §HLeader Skill§!§!"
 	tec_trait_upkeep_scale_with_negatives: "§YTrait upkeep scale with §RNegative Traits§! suppressed till now§!"
 
+	tec_loc_effect_administrators: "£job_politician£ Administrators"
+	tec_loc_effect_researchers: "£job_researcher£ $job_researcher_plural$"
+	tec_loc_effect_priests: "£job_priest£ $job_priest_plural$"
+	tec_loc_effect_soldiers: "£job_soldier£ $job_soldier_plural$"
+	tec_loc_effect_metallurgists: "£job_foundry£ $job_foundry_plural$"
+
  #Situations	# TODO CODE REWORK - ICON
 	tec_loc_situation:0 "Situation"
 
