--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -458,7 +458,7 @@
 	tr_tec_statecraft_4_delayed:0 "Constant change and evolution is what bring us here, and is what will bring us forward."
 
 		tr_tec_statecraft_final_1:0 "Flexible Status"
-		tr_tec_statecraft_final_1_text:0 "£unity£ §YAdministrators§! produce §G+2§! extra §Y$tec_loc_amenities$§!."
+		tr_tec_statecraft_final_1_text:0 "$tec_loc_amenities$ from $tec_loc_effect_administrators$: §G+2§!"
 		tr_tec_statecraft_final_1_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_statecraft_final_1_text$"
 		tr_tec_statecraft_final_1_delayed:0 "Coordinating a whole empire requires a great degree of flexibility and effective utility."
 
