--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -210,7 +210,9 @@ mod_job_preacher_trade_value_add: "£trade_value£ Trade Value from £job_preach
 	building_tec_betharian_power_plant:0 "$building_betharian_power_plant$"
 	building_tec_betharian_power_plant_desc:0 "$building_betharian_power_plant_desc$"
 
-# TRAITS replaces
+	building_league_offices_effect:0 "$tec_loc_amenities$ from $tec_loc_effect_administrators$: §G+1§!"
+
+	# TRAITS replaces
 # ------------------------------------------------------------
 # Psionic changes
 	trait_latent_psionic_desc:0 "§LThis species has latent psionic abilities, which are dormant in most of its members. Although quite rare, these powers will manifest in some leaders.§!\n"
