feat: explored iterators and used to go over classes and ethic in different locations

--- a/localisation/english/zz_evolved_events_lore_l_english.yml
+++ b/localisation/english/zz_evolved_events_lore_l_english.yml
@@ -1071,8 +1071,8 @@ tec_aiauth.ethic.xenophile: "Align with §Y$ethic_xenophile$§! Ethic"
 tec_aiauth.ethic.xenophobe: "Align with §Y$ethic_xenophobe$§! Ethic"
 tec_aiauth.ethic.cooperative: "Align with §Y$ethic_cooperative$§! Ethic"
 tec_aiauth.ethic.competitive: "Align with §Y$ethic_competitive$§! Ethic"
-tec_aiauth.ethic.green: "Align with §Y$ethic_ecologist$§! Ethic"
-tec_aiauth.ethic.industrial: "Align with §Y$ethic_industrialist$§! Ethic"
+tec_aiauth.ethic.ecologist: "Align with §Y$ethic_ecologist$§! Ethic"
+tec_aiauth.ethic.industrialist: "Align with §Y$ethic_industrialist$§! Ethic"
 tec_aiauth.ethic.pluralist: "Align with §Y$ethic_pluralist$§! Ethic"
 tec_aiauth.ethic.elitist: "Align with §Y$ethic_elitist$§! Ethic"
 tec_aiauth.ethic.gestalt: "Reset Alignment"
