ascension rework # 3 - UNSTABLE

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -1133,7 +1133,7 @@
 	# Crafters
 		civic_crafters:0 "§P£tec_civic_job£§!Masterful Crafters"
 		civic_crafters_desc:0 "['concept_tec_job_alteration_civic']\n\nA penchant for meticulous crafting lies at the heart of this society. Deft appendages and keen sensory organs aid them in creating truly wondrous treasures even in the most basic of trades."
-		civic_crafters_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£consumer_goods£ Artisan Might§!\n- ['concept_tec_specialist_job_artisan_plural_icon'] are replaced with ['concept_tec_specialist_job_artificer_plural_icon'].\n\n$tec_loc_c_unlocks_feature$ §H£district£ Architectural Wonders§!\n- Every §Y3§! §HIndustrial Districts§! grant §G1§! £building£ §YBuilding Slot§! on regular planets.\n\n$tec_loc_c_combinations$\n- §H$origin_void_dwellers$§!: The §H£district£ Architectural Wonders§! is applied on §HHabitats§!\n"
+		civic_crafters_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£consumer_goods£ Artisan Might§!\n- ['concept_tec_specialist_job_artisan_plural_icon'] are replaced with ['concept_tec_specialist_job_artificer_plural_icon'].\n\n$tec_loc_c_unlocks_feature$ §H£district£ Architectural Wonders§!\n- Every §Y3§! §HIndustrial Districts§! grant §G1§! £building£ §YBuilding Slot§! on regular planets.\n\n$tec_loc_c_combinations$\n- §H$origin_void_dwellers$§!: §H£district£ Architectural Wonders§! feature is applied on §HHabitats§!\n"
 
 		civic_corporate_crafters:0 "§P£tec_civic_job£§!Mastercraft Inc."
 		civic_corporate_crafters_desc:0 "['concept_tec_job_alteration_civic']\n\nThis megacorporation has focused its production pipeline solely on goods of the highest quality and profit margins, creating and marketing stunning products with artistry and craft."
