--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -425,7 +425,7 @@ l_english:
 
 			job_tec_hive_germinator:0 "Stem Ward"
 			job_tec_hive_germinator_plural:0 "Stem Watchmen"
-			job_tec_hive_germinator_desc:0 "These dedicated individuals oversee and serve as caretakers of the new life an sustenance of this society."
+			job_tec_hive_germinator_desc:0 "These dedicated individuals oversee and serve as caretakers of the new life and sustenance of this society."
 			job_tec_hive_germinator_effect_desc:0 "£job_tec_hive_germinator£ $job_tec_hive_germinator_plural$ generate §Y$tec_loc_energy$§!."
 			job_tec_hive_germinator_effect_nocheese_desc:0 "£job_tec_hive_germinator£ $job_tec_hive_germinator_plural$ generate §Y$tec_loc_energy$§!."
 			mod_job_tec_hive_germinator_add:0 "$job_tec_hive_germinator$ Jobs"
@@ -434,7 +434,7 @@ l_english:
 
 			job_tec_hive_germinator_drone:0 "Germinator Drone"
 			job_tec_hive_germinator_drone_plural:0 "Germinator Drones"
-			job_tec_hive_germinator_drone_desc:0 "These drones oversee and serve as caretakers of the new life an sustenance of the collective."
+			job_tec_hive_germinator_drone_desc:0 "These drones oversee and serve as caretakers of the new life and sustenance of the collective."
 			job_tec_hive_germinator_drone_effect_desc:0 "£job_tec_hive_germinator_drone£ $job_tec_hive_germinator_drone_plural$ generate §Y$tec_loc_energy$§!."
 			job_tec_hive_germinator_drone_effect_nocheese_desc:0 "£job_tec_hive_germinator_drone£ $job_tec_hive_germinator_drone_plural$ generate §Y$tec_loc_energy$§!."
 			mod_job_tec_hive_germinator_drone_add:0 "$job_tec_hive_germinator_drone$ Jobs"
@@ -1000,6 +1000,12 @@ l_english:
  # /
 
  # ------------------------------------------------- Habitats
+	district_tec_hab_logistics:0 "Orbital Logistics District"
+	district_tec_hab_logistics_plural:0 "$district_tec_hab_extraction$s"
+	district_tec_hab_logistics_desc:0 "Large sections of the central orbital habitat are repurposed to coordinate the sub-orbitals and mining stations around the system, increasing their efficiency and allowing a proper transmission of manpower and resources amongsts each one."
+	district_tec_hab_logistics_effect:0 "This $tec_loc_district$ provide jobs that increase §Y$tec_loc_megastructure$§! resource yield."
+
+	# Old habitat districts
 	district_tec_hab_extraction:0 "Orbital Extraction District"
 	district_tec_hab_extraction_plural:0 "$district_tec_hab_extraction$s"
 	district_tec_hab_extraction_desc:0 "Large sections of the central orbital habitat are repurposed to coordinate the sub-orbitals and mining stations around the system, increasing their efficiency and allowing a proper transmission of manpower and resources amongsts each one."
