--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -37,6 +37,7 @@
 	tec_loc_alloys:0 "£alloys£ Alloys"
 	tec_loc_consumer_goods:0 "£consumer_goods£ Consumer Goods"
 	tec_loc_cg:0 "$tec_loc_consumer_goods$"
+	tec_loc_cgs:0 "$tec_loc_consumer_goods$"
 	tec_loc_unity:0 "£unity£ Unity"
 	tec_loc_influence:0 "£influence£ Influence"
 
@@ -513,10 +514,14 @@ tec_cui_tec_ai_empire_leader_loc: "Leader (non-AI Nodes)"
  decision_tec_debug_ship_techs_desc:0 "Provides all ship construction and starbase upgrade techs"
  decision_tec_debug_ship_techs_tooltip:0 "Provides all ship construction and starbase upgrade techs"
 
+ modifier_tec_debug_test_megastructures:0 "z-DEBUG-MEGASTRUCTURES"
+ modifier_tec_debug_test_megastructures_desc:0 "a"
+ modifier_tec_debug_test_megastructures_tooltip:0 "a"
+
 # Debug Windows
-tec_debug_no: "§RNo§!"
-tec_debug_yes: "§GYes§!"
-tec_debug_na: "§YN/A§!"
+tec_debug_no:0 "§RNo§!"
+tec_debug_yes:0 "§GYes§!"
+tec_debug_na:0 "§YN/A§!"
 
 tec_debug.1.name: "Debugging Leader: [event_target:tec_debug_leader.GetName]"
 tec_debug.1.desc: "[event_target:tec_debug_leader.tec_debug_leader_general_info][event_target:tec_debug_leader.tec_debug_leader_ainode_info][event_target:tec_debug_leader.tec_debug_leader_pick_traits_info][event_target:tec_debug_leader.tec_debug_leader_flags_variables_info]"
