--- a/localisation/english/zz_evolved_origins_l_english.yml
+++ b/localisation/english/zz_evolved_origins_l_english.yml
@@ -188,14 +188,43 @@ civic_slavetothesystem_secondary_species:0 "Cyborg civils"
 
 # Wip
 
- origin_tec_hiveplanet:0 "TODO POSTCODE REWORK Hive World"
- origin_tec_hiveplanet_desc:0 ""
+	origin_tec_hiveplanet:0 "TODO POSTCODE REWORK Hive World"
+	origin_tec_hiveplanet_desc:0 ""
+
+ # Climate Survivors
+	origin_tec_climate_survivors:0 "Against All Odds"
+	origin_tec_climate_survivors_desc:0 "TODO POSTCODE REWORK - check civic_tec_origin_climate_survivors"
+		# TL DR climate catastrophe, some fled the planet in desperation, rest are really drawn back but have extra bonuses for surviving in other planets
+	START_SCREEN_ORIGIN_TEC_CLIMATE_SURVIVORS_GENERIC:0 "TODO POSTCODE REWORK"
+	START_SCREEN_ORIGIN_TEC_CLIMATE_SURVIVORS_COLD:0 "TODO POSTCODE REWORK - The sky liquified due to the relentless cold, C02 raining from the sky in a deadly aurora, freezing anything that touched it immediately. But we resisted."
+	START_SCREEN_ORIGIN_TEC_CLIMATE_SURVIVORS_WET:0 "TODO POSTCODE REWORK - The tidal force of the seas washed away all our technology, all our cities, all our lifes. The strenght of the storms cleared any sign of our society. But we resisted."
+	START_SCREEN_ORIGIN_TEC_CLIMATE_SURVIVORS_HOT:0 "TODO POSTCODE REWORK - The very stars punished our existance, melting and charring anything outside the reach of a shadow or the protection of a shelter, while fire tornados sterilized whoever tried to survive, the seas boiled and evaporated in a deadly steam."
 
 
- origin_tec_climate_survivors:0 "Against All Odds"
- origin_tec_climate_survivors_desc:0 "TODO POSTCODE REWORK - check civic_tec_origin_climate_survivors"
-	# TL DR climate catastrophe, some fled the planet in desperation, rest are really drawn back but have extra bonuses for surviving in other planets
- START_SCREEN_ORIGIN_TEC_CLIMATE_SURVIVORS_GENERIC:0 "TODO POSTCODE REWORK"
- START_SCREEN_ORIGIN_TEC_CLIMATE_SURVIVORS_COLD:0 "TODO POSTCODE REWORK - The sky liquified due to the relentless cold, C02 raining from the sky in a deadly aurora, freezing anything that touched it immediately. But we resisted."
- START_SCREEN_ORIGIN_TEC_CLIMATE_SURVIVORS_WET:0 "TODO POSTCODE REWORK - The tidal force of the seas washed away all our technology, all our cities, all our lifes. The strenght of the storms cleared any sign of our society. But we resisted."
- START_SCREEN_ORIGIN_TEC_CLIMATE_SURVIVORS_HOT:0 "TODO POSTCODE REWORK - The very stars punished our existance, melting and charring anything outside the reach of a shadow or the protection of a shelter, while fire tornados sterilized whoever tried to survive, the seas boiled and evaporated in a deadly steam."
+	d_tec_frozen_city:0 "Snow-buried Metropolis"
+	d_tec_frozen_city_desc:0 ""
+	d_tec_frozen_refuge:0 "Silent Remnants"
+	d_tec_frozen_refuge_desc:0 ""
+	d_tec_frozen_wasteland:0 "Frozen Wasteland"
+	d_tec_frozen_wasteland_desc:0 ""
+	d_tec_frozen_forests:0 "Perma-frosted Forests"
+	d_tec_frozen_forests_desc:0 ""
+
+	d_tec_flooded_city:0 "Flooded Metropolis"
+	d_tec_flooded_city_desc:0 ""
+	d_tec_flooded_refuge:0 "Drifted-Away Refuge"
+	d_tec_flooded_refuge_desc:0 ""
+	d_tec_flooded_continents:0 ""
+	d_tec_flooded_continents_desc:0 ""
+	d_tec_flooded_ruins:0 "Submerged Ruins"
+	d_tec_flooded_ruins_desc:0 ""
+
+	d_tec_charred_city:0 "Melted Metropolis"
+	d_tec_charred_city_desc:0 ""
+	d_tec_charred_refuge:0 "Burnt Refuges"
+	d_tec_charred_refuge_desc:0 ""
+	d_tec_charred_steppes:0 "Burning Steppes"
+	d_tec_charred_steppes_desc:0 ""
+	d_tec_charred_steppes:0 "Burning Steppes"
+	d_tec_charred_steppes_desc:0 ""
+ # /
