ascension rework # 5 - I am scared

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -2733,59 +2733,57 @@ tech_reverse_advanced_dome: " "
 # /
 # --------------- GENE T1
  # --------------- GENE T1 SITUATION
-	tec_gene_path.10050.name:0 "Driven Evolution"
-	tec_gene_path.10050.desc.regular:0 "TODO ASCENSION"
-	#Sometimes evolution needs a nudge in the right direction. We now have the technology to genetically modify our bodies and minds to endure the trials of an ever-changing environment at an unprecedented rate, and now we also have the opportunity to further change our possibilities."
-	tec_gene_path.10050.desc.hive:0 "TODO ASCENSION"
-	tec_gene_path.10050.desc.cyberhive:0 "TODO ASCENSION"
-	tec_gene_path.10050.desc.biohive:0 "TODO ASCENSION"
-	tec_gene_path.10050.desc.biomech_hive:0 "TODO ASCENSION"
+	tec_gene_path.10050.name:0 "Driven Genetics"
+	tec_gene_path.10050.desc.regular:0 "Sometimes the natural evolution needs a nudge in the right direction, and with mastery over genetic edition tools... we have the best possible way to provide it.\n\nWe will be able to modify our bodies, our minds, the very foundation of our species to endure the trials of an ever-changing environment at an unprecedented rate, even with the opportunity to further change our possibilities"
+	tec_gene_path.10050.desc.hive:0 "$tec_gene_path.10050.desc.regular$"
+	tec_gene_path.10050.desc.cyberhive:0 "$tec_gene_path.10050.desc.regular$"
+	tec_gene_path.10050.desc.biohive:0 "$tec_gene_path.10050.desc.regular$"
+	tec_gene_path.10050.desc.biomech_hive:0 "$tec_gene_path.10050.desc.regular$"
 	tec_gene_path.10050.regular:0 "We will be architects of our destiny"
 	tec_gene_path.10050.regular.tooltip:0 "TODO ASCENSION"
-	tec_gene_path.10050.regular.notech:0 "TODO ASCENSION"
+	tec_gene_path.10050.regular.notech:0 "We should focus on unlocking further §Y$tec_loc_society_icon$ Genetic Technologies§!"
 	tec_gene_path.10050.regular.notech.tooltip:0 "TODO ASCENSION"
-	tec_gene_path.10050.hive:0 "We will improve, we will become more"
+	tec_gene_path.10050.hive:0 "We will improve, our collective wil be more."
 	tec_gene_path.10050.hive.tooltip:0 "TODO ASCENSION"
-	tec_gene_path.10050.hive.notech:0 "TODO ASCENSION"
+	tec_gene_path.10050.hive.notech:0 "$tec_gene_path.10050.regular.notech$"
 	tec_gene_path.10050.hive.notech.tooltip:0 "TODO ASCENSION"
 
 	tec_gene_path.10060.name:0 "Tailoring Our Own Selves"
-	tec_gene_path.10060.desc.regular:0 "TODO ASCENSION"
-	tec_gene_path.10060.desc.hive:0 "TODO ASCENSION"
-	#"The first step on this research is to find the proper combination of genes that suit the purpose of moving our species to the right direction; Several pairs, triads and quad groups have resulted compatible, but we need to find the ones that really result in a perfect mixture."
-	tec_gene_path.10060.desc.cyberhive:0 "TODO ASCENSION"
-	tec_gene_path.10060.desc.biohive:0 "TODO ASCENSION"
-	tec_gene_path.10060.desc.biomech_hive:0 "TODO ASCENSION"
+	tec_gene_path.10060.desc.regular:0 "The first step for uncovering the secrets of a perfected genetic edition is to find the proper combination of genes that suit the purpose of moving our species to the right direction; Several pairs, triads and quad groups, out of already discovered positive genetic groups, have resulted compatible, but we need to find the ones that really result in a perfect mixture."
+	tec_gene_path.10060.desc.hive:0 "$tec_gene_path.10060.desc.regular$"
+	tec_gene_path.10060.desc.cyberhive:0 "$tec_gene_path.10060.desc.regular$"
+	tec_gene_path.10060.desc.biohive:0 "$tec_gene_path.10060.desc.regular$"
+	tec_gene_path.10060.desc.biomech_hive:0 "$tec_gene_path.10060.desc.regular$"
 	tec_gene_path.10060.regular:0 "Intriguing, continue the research"
 	tec_gene_path.10060.regular.tooltip:0 "$tec_situation_continues_good$"
-	tec_gene_path.10060.regular.notech:0 "TODO ASCENSION"
+	tec_gene_path.10060.regular.notech:0 "We should develop better §Y$tec_loc_society_icon$ Genetic Technologies§!..."
 	tec_gene_path.10060.regular.notech.tooltip:0 "TODO ASCENSION"
-	tec_gene_path.10060.hive:0 "TODO ASCENSION"
+	tec_gene_path.10060.hive:0 "We must experiment more!"
 	tec_gene_path.10060.hive.tooltip:0 "TODO ASCENSION"
-	tec_gene_path.10060.hive.notech:0 "TODO ASCENSION"
+	tec_gene_path.10060.hive.notech:0 "$tec_gene_path.10060.regular.notech$"
 	tec_gene_path.10060.hive.notech.tooltip:0 "TODO ASCENSION"
 
 	tec_gene_path.10075.name:0 "Genomic Improvement"
-	tec_gene_path.10075.desc.regular:0 "TODO ASCENSION"
-	tec_gene_path.10075.desc.hive:0 "TODO ASCENSION"
-	tec_gene_path.10075.desc.cyberhive:0 "TODO ASCENSION"
-	tec_gene_path.10075.desc.biohive:0 "TODO ASCENSION"
-	tec_gene_path.10075.desc.biomech_hive:0 "TODO ASCENSION"
-	tec_gene_path.10075.regular:0 "TODO ASCENSION"
+	tec_gene_path.10075.desc.regular:0 "We did it! We have discovered a relatively estable group of genetic patterns that allow exponential protein alterations at a celular level, unlocking a level of edition never before achievable.\n\nThis would allow a big degree of malleability to pre-existing trait and qualities of our species, as the risk of mutation is zero while the amount of tailorable changes is severely higher."
+	tec_gene_path.10075.desc.hive:0 "$tec_gene_path.10075.desc.regular$"
+	tec_gene_path.10075.desc.cyberhive:0 "$tec_gene_path.10075.desc.regular$"
+	tec_gene_path.10075.desc.biohive:0 "$tec_gene_path.10075.desc.regular$"
+	tec_gene_path.10075.desc.biomech_hive:0 "$tec_gene_path.10075.desc.regular$"
+	tec_gene_path.10075.regular:0 "Genetic Malleability? Truly convenient"
 	tec_gene_path.10075.regular.tooltip:0 "$tec_situation_continues_good$"
-	tec_gene_path.10075.regular.notech:0 "TODO ASCENSION"
-	tec_gene_path.10075.regular.notech.tooltip:0 "$tec_situation_continues_good$"
-	tec_gene_path.10075.hive:0 "TODO ASCENSION"
+	tec_gene_path.10075.regular.notech:0 "We need more §Y$tec_loc_society_icon$ Genetic Technologies§! to use this discovery..."
+	tec_gene_path.10075.regular.notech.tooltip:0 "TODO ASCENSION"
+	tec_gene_path.10075.hive:0 "Further altering our drones will be a great boon"
 	tec_gene_path.10075.hive.tooltip:0 "$tec_situation_continues_good$"
-	tec_gene_path.10075.hive.notech:0 "TODO ASCENSION"
-	tec_gene_path.10075.hive.notech.tooltip:0 "$tec_situation_continues_good$"
+	tec_gene_path.10075.hive.notech:0 "$tec_gene_path.10075.regular.notech$"
+	tec_gene_path.10075.hive.notech.tooltip:0 "TODO ASCENSION"
 
 	tec_gene_path.10090.name:0 "Evolutionary Mastery"
-	tec_gene_path.10090.desc.regular:0 "TODO ASCENSION"
-	tec_gene_path.10090.desc.hive:0 "TODO ASCENSION"
-	tec_gene_path.10090.desc.cyberhive:0 "TODO ASCENSION"
-	tec_gene_path.10090.desc.biohive:0 "TODO ASCENSION"
-	tec_gene_path.10090.desc.biomech_hive:0 "TODO ASCENSION"
+	tec_gene_path.10090.desc.regular:0 "Gone are the days when the survival of our species was at the mercy of chance, when a [Owner.GetSpeciesName]'s fate was decided on the whims of nature, in the genetic lottery.\n\nThe Engineers of our time work not in steel and concrete, but in the very building blocks of life itself; Our advanced genetic modification, paired with the new genetic malleability discovered, will secure our future."
+	tec_gene_path.10090.desc.hive:0 "$tec_gene_path.10090.desc.regular$"
+	tec_gene_path.10090.desc.cyberhive:0 "$tec_gene_path.10090.desc.regular$"
+	tec_gene_path.10090.desc.biohive:0 "$tec_gene_path.10090.desc.regular$"
+	tec_gene_path.10090.desc.biomech_hive:0 "$tec_gene_path.10090.desc.regular$"
 	tec_gene_path.10090.adopt.genetics:0 "Embrace the §HGenetic§! applications"
 	tec_gene_path.10090.adopt.genetics.tooltip:0 "§Y$trigger_tec_warning$ This decision is final and can't be undone!\nWe will continue on this path, taking advantage of genetic improvements, unlocking the §Y$tradition_genetics$§! traditions. The situation will continue normally."
 	tec_gene_path.10090.reconsider.biogenics:0 "Reconsider the §YBiogenic§! applications"
@@ -2795,10 +2793,10 @@ tech_reverse_advanced_dome: " "
 	# GENE T1 Situation Completed
 	tec_gene_path.105.name:0 "Genetic Malleability"
 	tec_gene_path.105.desc.regular:0 "It is done, we have discovered a way to further amplify our species potential and now we can adapt the genome to changes we could not imagine before."
-	tec_gene_path.105.desc.hive:0 "TODO ASCENSION"
-	tec_gene_path.105.desc.cyberhive:0 "TODO ASCENSION"
-	tec_gene_path.105.desc.biohive:0 "TODO ASCENSION"
-	tec_gene_path.105.desc.biomech_hive:0 "TODO ASCENSION"
+	tec_gene_path.105.desc.hive:0 "$tec_gene_path.105.desc.regular$"
+	tec_gene_path.105.desc.cyberhive:0 "$tec_gene_path.105.desc.regular$"
+	tec_gene_path.105.desc.biohive:0 "$tec_gene_path.105.desc.regular$"
+	tec_gene_path.105.desc.biomech_hive:0 "$tec_gene_path.105.desc.regular$"
 	tec_gene_path.105.regular:0 "Amazing!"
 	tec_gene_path.105.regular.tooltip:0 "Positive standard Biological traits now are 1 trait point cheaper.\nThe §Y$tradition_tec_vanilla_genetics$§! tradition is now unlocked."
 	tec_gene_path.105.hive:0 "TODO ASCENSION"
@@ -2823,31 +2821,34 @@ tech_reverse_advanced_dome: " "
 # --------------- GENE T1 INTERLUDE
  # --------------- GENE T1 INTERLUDE EVENT
 	tec_gene_path.150.name:0 "Redesigned Genome"
-	tec_gene_path.150.desc.standard:0 "TODO ASCENSION\n$tec_gene_path.150.desc.intro.variants$"
-	tec_gene_path.150.desc.hive:0 "TODO ASCENSION\n$tec_gene_path.150.desc.intro.variants$"
+	tec_gene_path.150.desc.standard:0 "With our recently adquired knowledge of genetic improvements, we reached an incredible point of change, but... it's not enough.\nWe theorize we can develop our capacities further,\n\n\n$tec_gene_path.150.desc.intro.variants$\n\nWe should take advantage of this opportunity as soon as possible"
+	tec_gene_path.150.desc.hive:0 "$tec_gene_path.150.desc.standard$"
 	tec_gene_path.150.desc.intro.variants:0 "TODO ASCENSION"
 	tec_gene_path.150.tutorial.genetics:0 "TODO ASCENSION"
 	tec_gene_path.150.tutorial.technoorganic:0 "TODO ASCENSION"
 	tec_gene_path.150.tutorial.biomystical:0 "TODO ASCENSION"
+	tec_gene_path.150.ok:0 "We will improve our very selves, even more"
+	tec_gene_path.150.ok.tooltip:0 "TODO ASCENSION"
  # /
 # /
 # --------------- GENE T2
  # --------------- GENE T2 EVENT
 	tec_gene_path.200.name:0 "The Search for Perfection"
-	tec_gene_path.200.desc:0 "Closer to discover the secrets of all life, we must invest a further effort in order to really unlock all our capacities. While it may be costly, we will make [Root.GetName] be set in story as the ones who reached perfection, after we finish the first batch of genetic changes we intend to make."
+	tec_gene_path.200.desc.regular:0 "As we drive our knowledge closer to discover the secrets of life, we must invest a further effort in order to really unlock all our capacities.\n\nWhile it may be costly, we will make [Root.GetName] be set in history as the ones who changed the very foundation of biological creation, we will known as the ones who reached perfection."
+	tec_gene_path.200.desc.hive:0 "$tec_gene_path.200.desc.hive$"
 	tec_gene_path.200.a:0 "Proceed carefully."
-	tec_gene_path.200.a.tooltip:0 "The §Y$situation_tec_gene_path_t2$§! Situation is available.\nWe will change our approach towards a §Y$situation_approach_tec_gene_path_t2_slow$§! of new cybernetic improvements.\nThis make the conducted research slower, but less costly and, overall, §GSafer§!"
+	# TODO ASCENSION - CHANGE OPTION AND TOOLTIPS
+	tec_gene_path.200.a.tooltip:0 "The §Y$situation_approach_tec_gene_path_t2$§! Situation is available.\nWe will change our approach towards a §Y$situation_approach_tec_gene_path_t2_slow$§! of new cybernetic improvements.\nThis make the conducted research slower, but less costly and, overall, §GSafer§!"
 	tec_gene_path.200.b:0 "Rush this discovery!"
 	tec_gene_path.200.b.tooltip:0 "The §Y$situation_tec_gene_path_t2$§! Situation is available.\nWe will change our approach towards a §Y$situation_approach_tec_gene_path_t2_fast$§! of the perfected genetic code.\nThis make the conducted research faster, but less costly and, overall, §YRiskier§!"
  # /
  # --------------- GENE T2 SITUATION
-	# 25%
-	tec_gene_path.20025.name:0 "First steps"
-	tec_gene_path.20025.desc:0 "We are now reaching the first quarter of the isolated experiments with the perfected strain; the sheer excitement can be felt amongst our kind dedicated to the project, as they are being able to reliably replicate most of the previously studied variants, extracting the genetic data required."
+	tec_gene_path.20025.name:0 "Modifying our Steps"
+	tec_gene_path.20025.desc.regular:0 "As we continue to develop the isolated experiments with the perfected genetic strain, the sheer excitement can be felt amongst our kind dedicated to the project, as they are being able to reliably replicate most of the previously studied variants, extracting the genetic data required.\n\nHowever, we still need to do several trials to ensure the stability of the proposed changes and the repercussions it would have in our genetic structure, for good."
+	tec_gene_path.20025.desc.hive:0 "$tec_gene_path.20025.desc.regular$"
 	tec_gene_path.20025.a:0 "Continue, we will do it."
-	tec_gene_path.20025.a.tooltip:0 "The situation continues without issues"
+	tec_gene_path.20025.a.tooltip:0 "TODO ASCENSION"
 
-	# 50% 
 	# these events only pops for special types of countries
  	# Necrophages - Tell they will lose the mechanic
 	tec_gene_path.20051.name:0 "A Cure for Un-Death"
@@ -2883,11 +2884,12 @@ tech_reverse_advanced_dome: " "
 	tec_gene_path.20054.b:0 "Well... maybe its time for a change"
 	tec_gene_path.20054.b.tooltip:0 "The [Root.Owner.Species.GetNamePlural] will lose their §YClone§! specific trait, gaining a specific §YClonation Mastery§! trait."
 
-	# 75%
-	tec_gene_path.20075.name:0 "TO DO"
-	tec_gene_path.20075.desc:0 "TO DO"
-	tec_gene_path.20075.a:0 "TO DO"
-	tec_gene_path.20075.a.tooltip:0 "TO DO"
+	# Indicates the potential for upgrading the traits
+	tec_gene_path.20075.name:0 "Room For Improvement"
+	tec_gene_path.20075.desc.regular:0 "TODO ASCENSION"
+	tec_gene_path.20075.desc.hive:0 "TODO ASCENSION"
+	tec_gene_path.20075.a:0 "TODO ASCENSION"
+	tec_gene_path.20075.a.tooltip:0 "TODO ASCENSION"
  # /
  # --------------- GENE T2 FINISH
 	# GENE T2 Situation Completed
