--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -54,9 +54,12 @@
 	tec_loc_industrial_resources:0 "£alloys£ £consumer_goods£ Manufactured Resources"
 
 
-	tec_loc_engineering:0 "£engineering£ $engineering_research$"
-	tec_loc_society:0 "£society£ $society_research$"
-	tec_loc_physics:0 "£physics£ $physics_research$"
+	tec_loc_engineering:0 "$tec_loc_engineering_icon$ $engineering_research$"
+	tec_loc_society:0 "$tec_loc_society_icon$ $society_research$"
+	tec_loc_physics:0 "$tec_loc_physics_icon$ $physics_research$"
+	tec_loc_engineering_icon:0 "£engineering£"
+	tec_loc_society_icon:0 "£society£"
+	tec_loc_physics_icon:0 "£physics£"
 	tec_loc_research_resources_icon:0 "£trigger_tec_research£"
 	tec_loc_research_resources:0 "£trigger_tec_research£ Research"
 	tec_loc_research_speed:0 "£job_researcher£ Research Speed"
