--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -783,7 +783,7 @@
 
 	tr_tec_biogenics_6:0 "Biomatter Reclamation"
 	tr_tec_biogenics_6_delayed:0 "Nothing is left to waste, no one is useless for our plans - Whoever we use as patterns, test or elements of interest will serve our kind."
-	tr_tec_biogenics_6_tooltip:0 "Pops undergoing §Y£job_tec_xenotransplanted£ Xenotransplantation§! or §Y£job_purge£ Xenoextraction§! also produce extra §Y$tec_loc_organic_assembly$§! and §Y$tec_loc_society_research$§!."
+	tr_tec_biogenics_6_tooltip:0 "Pops undergoing §Y£job_tec_xenotransplanted£ Xenotransplantation§! or §Y£job_purge£ Xenoextraction§! also produce extra §Y$tec_loc_organic_assembly$§! and §Y$tec_loc_society$§!."
 
 
 	tr_tec_biogenics_6:0 "REPLACE_ME"
