Machine age update # 1 - UNFINISHED/UNSTABLE

--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -1433,6 +1433,9 @@ policy_goods_policy:0 "Consumer Goods Production"
 	policy_tec_ethic_policy_slider:0 "---- £system£ §EEthic Policies§! ----"
 	policy_tec_ethic_policy_slider_desc:0 "Policies that allow the customization and direction of empire ethics."
 
+	policy_tec_ethic_policy_slider:0 "---- £unity£ §EAscension Policies§! ----"
+	policy_tec_ethic_policy_slider_desc:0 "Policies that allow the customization and direction of ascension paths taken."
+
 	policy_population_policy_slider:0 "---- £pops£ §EPopulation Policies§! ----"
 	policy_population_policy_slider_desc:0 "Policies relevant to population control."
 
