--- a/localisation/english/replace/zzzz_uml_modifier_l_english.yml
+++ b/localisation/english/replace/zzzz_uml_modifier_l_english.yml
@@ -21890,6 +21890,133 @@
  mod_pop_category_workers_all_industrial_upkeep_add: "$mod_pop_category_workers_all_industrial_upkeep_mult$"
  mod_pop_category_workers_all_basic_upkeep_add: "$mod_pop_category_workers_all_basic_upkeep_mult$"
 
+ # pop_category_workers_cyborgs - §BCyborg§! $WORKERS$
+ mod_base_pop_category_workers_cyborgs: "§BCyborg§! $WORKERS$"
+
+ mod_pop_category_workers_cyborgs_produces_mult: "§BCyborg§! $WORKERS$ Output"
+ mod_pop_category_workers_cyborgs_upkeep_mult: "§BCyborg§! $WORKERS$ Upkeep"
+
+ mod_pop_category_workers_cyborgs_minerals_produces_mult: "£minerals£ $minerals$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_food_produces_mult: "£food£ $food$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_energy_produces_mult: "£energy£ $energy$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_consumer_goods_produces_mult: "£consumer_goods£ $consumer_goods$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_alloys_produces_mult: "£alloys£ $alloys$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_physics_research_produces_mult: "£physics_research£ $physics_research$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_society_research_produces_mult: "£society_research£ $society_research$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_engineering_research_produces_mult: "£engineering_research£ $engineering_research$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_rare_crystals_produces_mult: "£rare_crystals£ $rare_crystals$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_volatile_motes_produces_mult: "£volatile_motes£ $volatile_motes$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_exotic_gases_produces_mult: "£exotic_gases£ $exotic_gases$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_unity_produces_mult: "£unity£ $unity$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_influence_produces_mult: "£influence£ $influence$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_sr_living_metal_produces_mult: "£sr_living_metal£ $sr_living_metal$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_sr_zro_produces_mult: "£sr_zro£ $sr_zro$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_sr_dark_matter_produces_mult: "£sr_dark_matter£ $sr_dark_matter$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_nanites_produces_mult: "£nanites£ $nanites$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_minor_artifacts_produces_mult: "£minor_artifacts£ $minor_artifacts$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_sr_tec_biomass_produces_mult: "£sr_tec_biomass£ $sr_tec_biomass$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_sr_tec_ai_power_produces_mult: "£sr_tec_ai_power£ $sr_tec_ai_power$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_sr_tec_machine_processing_local_produces_mult: "£sr_tec_machine_processing_local£ $sr_tec_machine_processing_local$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_sr_tec_machine_processing_empire_produces_mult: "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_sr_tec_machine_processing_redirection_produces_mult: "£sr_tec_machine_processing_redirection£ $sr_tec_machine_processing_redirection$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_ai_unobtainium_produces_mult: "£ai_unobtainium£ $ai_unobtainium$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_pop_growth_produces_mult: "$tec_loc_pop_growth$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_biological_assembly_produces_mult: "$tec_loc_organic_assembly$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_assembly_produces_mult: "$tec_loc_assembly$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_all_research_produces_mult: "$tec_loc_research_resources$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_all_industrial_produces_mult: "$tec_loc_industrial_resources$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_all_basic_produces_mult: "$tec_loc_basic_resources$ from §BCyborg§! $WORKERS$"
+
+ mod_pop_category_workers_cyborgs_minerals_produces_add: "$mod_pop_category_workers_cyborgs_minerals_produces_mult$"
+ mod_pop_category_workers_cyborgs_food_produces_add: "$mod_pop_category_workers_cyborgs_food_produces_mult$"
+ mod_pop_category_workers_cyborgs_energy_produces_add: "$mod_pop_category_workers_cyborgs_energy_produces_mult$"
+ mod_pop_category_workers_cyborgs_consumer_goods_produces_add: "$mod_pop_category_workers_cyborgs_consumer_goods_produces_mult$"
+ mod_pop_category_workers_cyborgs_alloys_produces_add: "$mod_pop_category_workers_cyborgs_alloys_produces_mult$"
+ mod_pop_category_workers_cyborgs_physics_research_produces_add: "$mod_pop_category_workers_cyborgs_physics_research_produces_mult$"
+ mod_pop_category_workers_cyborgs_society_research_produces_add: "$mod_pop_category_workers_cyborgs_society_research_produces_mult$"
+ mod_pop_category_workers_cyborgs_engineering_research_produces_add: "$mod_pop_category_workers_cyborgs_engineering_research_produces_mult$"
+ mod_pop_category_workers_cyborgs_rare_crystals_produces_add: "$mod_pop_category_workers_cyborgs_rare_crystals_produces_mult$"
+ mod_pop_category_workers_cyborgs_volatile_motes_produces_add: "$mod_pop_category_workers_cyborgs_volatile_motes_produces_mult$"
+ mod_pop_category_workers_cyborgs_exotic_gases_produces_add: "$mod_pop_category_workers_cyborgs_exotic_gases_produces_mult$"
+ mod_pop_category_workers_cyborgs_unity_produces_add: "$mod_pop_category_workers_cyborgs_unity_produces_mult$"
+ mod_pop_category_workers_cyborgs_influence_produces_add: "$mod_pop_category_workers_cyborgs_influence_produces_mult$"
+ mod_pop_category_workers_cyborgs_sr_living_metal_produces_add: "$mod_pop_category_workers_cyborgs_sr_living_metal_produces_mult$"
+ mod_pop_category_workers_cyborgs_sr_zro_produces_add: "$mod_pop_category_workers_cyborgs_sr_zro_produces_mult$"
+ mod_pop_category_workers_cyborgs_sr_dark_matter_produces_add: "$mod_pop_category_workers_cyborgs_sr_dark_matter_produces_mult$"
+ mod_pop_category_workers_cyborgs_nanites_produces_add: "$mod_pop_category_workers_cyborgs_nanites_produces_mult$"
+ mod_pop_category_workers_cyborgs_minor_artifacts_produces_add: "$mod_pop_category_workers_cyborgs_minor_artifacts_produces_mult$"
+ mod_pop_category_workers_cyborgs_sr_tec_biomass_produces_add: "$mod_pop_category_workers_cyborgs_sr_tec_biomass_produces_mult$"
+ mod_pop_category_workers_cyborgs_sr_tec_ai_power_produces_add: "$mod_pop_category_workers_cyborgs_sr_tec_ai_power_produces_mult$"
+ mod_pop_category_workers_cyborgs_sr_tec_machine_processing_local_produces_add: "$mod_pop_category_workers_cyborgs_sr_tec_machine_processing_local_produces_mult$"
+ mod_pop_category_workers_cyborgs_sr_tec_machine_processing_empire_produces_add: "$mod_pop_category_workers_cyborgs_sr_tec_machine_processing_empire_produces_mult$"
+ mod_pop_category_workers_cyborgs_sr_tec_machine_processing_redirection_produces_add: "$mod_pop_category_workers_cyborgs_sr_tec_machine_processing_redirection_produces_mult$"
+ mod_pop_category_workers_cyborgs_ai_unobtainium_produces_add: "$mod_pop_category_workers_cyborgs_ai_unobtainium_produces_mult$"
+ mod_pop_category_workers_cyborgs_amenities_produces_add: "$tec_loc_amenities$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_stability_produces_add: "$tec_loc_stability$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_trade_value_produces_add: "$tec_loc_trade_value$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_edict_funds_produces_add: "$tec_loc_edict_funds$ from §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_biological_assembly_produces_add: "$mod_pop_category_workers_cyborgs_biological_assembly_produces_mult$"
+ mod_pop_category_workers_cyborgs_assembly_produces_add: "$mod_pop_category_workers_cyborgs_assembly_produces_mult$"
+ mod_pop_category_workers_cyborgs_all_research_produces_add: "$mod_pop_category_workers_cyborgs_all_research_produces_mult$"
+ mod_pop_category_workers_cyborgs_all_industrial_produces_add: "$mod_pop_category_workers_cyborgs_all_industrial_produces_mult$"
+ mod_pop_category_workers_cyborgs_all_basic_produces_add: "$mod_pop_category_workers_cyborgs_all_basic_produces_mult$"
+
+ mod_pop_category_workers_cyborgs_minerals_upkeep_mult: "£minerals£ $minerals$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_food_upkeep_mult: "£food£ $food$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_energy_upkeep_mult: "£energy£ $energy$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_consumer_goods_upkeep_mult: "£consumer_goods£ $consumer_goods$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_alloys_upkeep_mult: "£alloys£ $alloys$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_physics_research_upkeep_mult: "£physics_research£ $physics_research$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_society_research_upkeep_mult: "£society_research£ $society_research$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_engineering_research_upkeep_mult: "£engineering_research£ $engineering_research$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_rare_crystals_upkeep_mult: "£rare_crystals£ $rare_crystals$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_volatile_motes_upkeep_mult: "£volatile_motes£ $volatile_motes$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_exotic_gases_upkeep_mult: "£exotic_gases£ $exotic_gases$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_unity_upkeep_mult: "£unity£ $unity$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_influence_upkeep_mult: "£influence£ $influence$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_sr_living_metal_upkeep_mult: "£sr_living_metal£ $sr_living_metal$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_sr_zro_upkeep_mult: "£sr_zro£ $sr_zro$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_sr_dark_matter_upkeep_mult: "£sr_dark_matter£ $sr_dark_matter$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_nanites_upkeep_mult: "£nanites£ $nanites$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_minor_artifacts_upkeep_mult: "£minor_artifacts£ $minor_artifacts$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_sr_tec_biomass_upkeep_mult: "£sr_tec_biomass£ $sr_tec_biomass$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_sr_tec_ai_power_upkeep_mult: "£sr_tec_ai_power£ $sr_tec_ai_power$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_sr_tec_machine_processing_local_upkeep_mult: "£sr_tec_machine_processing_local£ $sr_tec_machine_processing_local$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_sr_tec_machine_processing_empire_upkeep_mult: "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_sr_tec_machine_processing_redirection_upkeep_mult: "£sr_tec_machine_processing_redirection£ $sr_tec_machine_processing_redirection$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_ai_unobtainium_upkeep_mult: "£ai_unobtainium£ $ai_unobtainium$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_all_research_upkeep_mult: "$tec_loc_research_resources$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_all_industrial_upkeep_mult: "$tec_loc_industrial_resources$ Upkeep for §BCyborg§! $WORKERS$"
+ mod_pop_category_workers_cyborgs_all_basic_upkeep_mult: "$tec_loc_basic_resources$ Upkeep for §BCyborg§! $WORKERS$"
+
+ mod_pop_category_workers_cyborgs_minerals_upkeep_add: "$mod_pop_category_workers_cyborgs_minerals_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_food_upkeep_add: "$mod_pop_category_workers_cyborgs_food_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_energy_upkeep_add: "$mod_pop_category_workers_cyborgs_energy_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_consumer_goods_upkeep_add: "$mod_pop_category_workers_cyborgs_consumer_goods_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_alloys_upkeep_add: "$mod_pop_category_workers_cyborgs_alloys_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_physics_research_upkeep_add: "$mod_pop_category_workers_cyborgs_physics_research_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_society_research_upkeep_add: "$mod_pop_category_workers_cyborgs_society_research_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_engineering_research_upkeep_add: "$mod_pop_category_workers_cyborgs_engineering_research_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_rare_crystals_upkeep_add: "$mod_pop_category_workers_cyborgs_rare_crystals_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_volatile_motes_upkeep_add: "$mod_pop_category_workers_cyborgs_volatile_motes_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_exotic_gases_upkeep_add: "$mod_pop_category_workers_cyborgs_exotic_gases_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_unity_upkeep_add: "$mod_pop_category_workers_cyborgs_unity_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_influence_upkeep_add: "$mod_pop_category_workers_cyborgs_influence_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_sr_living_metal_upkeep_add: "$mod_pop_category_workers_cyborgs_sr_living_metal_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_sr_zro_upkeep_add: "$mod_pop_category_workers_cyborgs_sr_zro_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_sr_dark_matter_upkeep_add: "$mod_pop_category_workers_cyborgs_sr_dark_matter_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_nanites_upkeep_add: "$mod_pop_category_workers_cyborgs_nanites_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_minor_artifacts_upkeep_add: "$mod_pop_category_workers_cyborgs_minor_artifacts_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_sr_tec_biomass_upkeep_add: "$mod_pop_category_workers_cyborgs_sr_tec_biomass_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_sr_tec_ai_power_upkeep_add: "$mod_pop_category_workers_cyborgs_sr_tec_ai_power_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_sr_tec_machine_processing_local_upkeep_add: "$mod_pop_category_workers_cyborgs_sr_tec_machine_processing_local_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_sr_tec_machine_processing_empire_upkeep_add: "$mod_pop_category_workers_cyborgs_sr_tec_machine_processing_empire_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_sr_tec_machine_processing_redirection_upkeep_add: "$mod_pop_category_workers_cyborgs_sr_tec_machine_processing_redirection_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_ai_unobtainium_upkeep_add: "$mod_pop_category_workers_cyborgs_ai_unobtainium_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_all_research_upkeep_add: "$mod_pop_category_workers_cyborgs_all_research_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_all_industrial_upkeep_add: "$mod_pop_category_workers_cyborgs_all_industrial_upkeep_mult$"
+ mod_pop_category_workers_cyborgs_all_basic_upkeep_add: "$mod_pop_category_workers_cyborgs_all_basic_upkeep_mult$"
+
  # pop_category_specialists - $SPECIALISTS$
  mod_base_pop_category_specialists: "$SPECIALISTS$"
 
