--- a/localisation/english/zz_bioservant_l_english.yml
+++ b/localisation/english/zz_bioservant_l_english.yml
@@ -230,10 +230,10 @@ no_synth_no_citizenship:0 "This constructs requires a bigger grade of §Yautonom
  ai_servitude:0 "Servitude"
  ai_servitude_short_desc:0 "These creations are held in absolute servitude to their masters, and can be used or discarded at their whim."
  ai_servitude_name:0 "AI Servitude"
- ai_servitude_desc:9 "The overriding purpose of any machine must be to serve its masters and perform whatever tasks it was designed for, regardless of how intelligent it may be.\n\n§ESynthethics have limited free will, improving their resource output but preventing them from working in £pop_cat_ruler£ §Y$pop_cat_ruler$ Jobs§!§!."
+ ai_servitude_desc:9 "The overriding purpose of any machine must be to serve its masters and perform whatever tasks it was designed for, regardless of how intelligent it may be.\n\n§ESynthetics have limited free will, improving their resource output but preventing them from working in £pop_cat_ruler£ §Y$pop_cat_ruler$ Jobs§!§!."
  ai_full_rights:0 "Citizen Rights"
  ai_full_rights_name:0 "Synthetic Citizen Rights"
- ai_full_rights_desc:5 "Any self-aware machine that fulfills the criteria of possessing true artificial intelligence is to be regarded as an individual, with all the rights and obligations that entails.\n\n§ESynthethics are given full citizen rights and will require §Y£consumer_goods£ $consumer_goods$§! Upkeep.\n§!"
+ ai_full_rights_desc:5 "Any self-aware machine that fulfills the criteria of possessing true artificial intelligence is to be regarded as an individual, with all the rights and obligations that entails.\n\n§ESynthetics are given full citizen rights and will require §Y£consumer_goods£ $consumer_goods$§! Upkeep.\n§!"
  ai_full_rights_short_desc:0 "These synthetics have been given full citizenship and the right to self-determination as equal members of society."
  
  pop_cat_tec_bio_servant:0 "Bio Servant"
